--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node ./ch1/code/v3/statement.js",
     "test": "echo \"Error: no test specified\" && exit 1"
